add some change